--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
+    "@sparticuz/chromium": "^143.0.4",
     "@types/sharp": "^0.31.1",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
@@ -33,6 +34,7 @@
     "openai": "^6.22.0",
     "pg": "^8.18.0",
     "puppeteer": "^24.37.3",
+    "puppeteer-core": "^24.37.4",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
